fixed overflow-x and pushed over nav issue

--- a/user/themes/ctms-theme/css/main.css
+++ b/user/themes/ctms-theme/css/main.css
@@ -180,7 +180,8 @@ li {
   flex-direction: column;
   height: 100%;
   width: 100%;
-  margin: 0px; }
+  margin: 0px;
+  overflow-x: hidden; }
 
 ::selection {
   color: #FFFFFF;
@@ -416,6 +417,10 @@ img.nav-logo {
   height: 2rem;
   left: -4rem;
   position: relative; }
+
+@media screen and (max-width: 550px) {
+  img.nav-logo {
+    display: none; } }
 
 a {
   color: black;
