--- a/user/themes/ctms-theme/scss/base/_base.scss
+++ b/user/themes/ctms-theme/scss/base/_base.scss
@@ -4,6 +4,7 @@
 	height: 100%;
 	width: 100%;
 	margin: 0px;
+	overflow-x: hidden;
 }
 
 ::selection {
